terraform/base/lb.tf
resource "aws_lb" "main" {
  name               = "magische-base-lb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb.id]
  subnets = [
    aws_subnet.public_1a.id,
    aws_subnet.public_1c.id,
    aws_subnet.public_1d.id
  ]
  enable_waf_fail_open = true

  access_logs {
    bucket  = aws_s3_bucket.lb_logs.bucket
    enabled = true
  }

  tags = {
    Name = "magische-base-lb"
  }
}


resource "aws_lb_listener" "dev" {
  load_balancer_arn = aws_lb.main.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
  certificate_arn   = module.dev_acm.acm_certificate_tokyo_arn

  default_action {
    type = "fixed-response"
    fixed_response {
      content_type = "text/plain"
      status_code  = "404"
      message_body = "404 Not Found"
    }
  }

  depends_on = [module.dev_acm.acm_certificate_tokyo_arn]
}

resource "aws_lb_listener" "prd" {
  load_balancer_arn = aws_lb.main.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
  certificate_arn   = module.prd_acm.acm_certificate_tokyo_arn

  default_action {
    type = "fixed-response"
    fixed_response {
      content_type = "text/plain"
      status_code  = "404"
      message_body = "404 Not Found"
    }
  }

  depends_on = [module.prd_acm.acm_certificate_tokyo_arn]
}
